[project]
name = "style-finder"
version = "0.1.0"
description = "CLI agent that finds similar clothing URLs from a style description"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "python-dotenv>=1.0.1",
  "requests>=2.32.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
